--- a/conf/nginx/default.conf
+++ b/conf/nginx/default.conf
@@ -5,12 +5,14 @@ server {
        root /var/www/htdocs;
        index index.php index.html index.htm index.nginx-debian.html;
        location / {
-               try_files $uri $uri/ =404;
+               #try_files $uri $uri/ =404;
+               try_files $uri $uri/ /index.php?_page=$uri&$query_string;
        }
 
         location ~ \.php$ {
-            # try_files $uri $uri/ /index.php?$query_string;
-            try_files $uri =404;
+            #try_files $uri $uri/ /index.php?_page=$query_string;
+            try_files $uri $uri/ /index.php?_page=$uri&$query_string;
+            #try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             fastcgi_pass blackoutland-notfallpunkt-php:9000;
             fastcgi_index index.php;
