--- a/www/composer.json
+++ b/www/composer.json
@@ -10,7 +10,9 @@
     "ext-json": "*",
     "ext-PDO": "*",
     "ext-mbstring": "*",
-    "ext-sqlite3": "*"
+    "ext-sqlite3": "*",
+    "voku/html-min": "^4.5",
+    "matthiasmullie/minify": "^1.3"
   },
   "autoload": {
     "classmap": [
