--- a/conf/php/Dockerfile
+++ b/conf/php/Dockerfile
@@ -3,7 +3,7 @@ FROM php:fpm-bullseye
 # Install dependencies
 RUN apt-get update && apt-get install -y git zlib1g-dev libjpeg-dev libpng-dev libonig-dev libcurl4-openssl-dev libicu-dev libsqlite3-dev libzip-dev
 
-RUN docker-php-ext-install pdo_mysql gd mbstring curl fileinfo iconv intl zip
+RUN docker-php-ext-install pdo_mysql gd mbstring curl fileinfo iconv intl zip unzip 7z
 
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
