--- a/www/composer.json
+++ b/www/composer.json
@@ -2,7 +2,7 @@
   "require": {
     "symfony/var-dumper": "*@dev",
     "twig/twig": "*@stable",
-    "aura/session": "2.1.0",
+    "aura/session": "^2.1",
     "hackzilla/password-generator": "^1.5",
     "uptodown/random-username-generator": "^1.0",
     "asika/autolink": "^2.0",
@@ -13,7 +13,9 @@
     "ext-sqlite3": "*",
     "voku/html-min": "^4.5",
     "matthiasmullie/minify": "^1.3",
-    "nette/utils": "^4.0"
+    "nette/utils": "^4.0",
+    "nette/security": "^3.1",
+    "josantonius/session": "^2.0"
   },
   "autoload": {
     "classmap": [
