--- a/www/composer.json
+++ b/www/composer.json
@@ -15,7 +15,8 @@
     "matthiasmullie/minify": "^1.3",
     "nette/utils": "^4.0",
     "nette/security": "^3.1",
-    "josantonius/session": "^2.0"
+    "josantonius/session": "^2.0",
+    "ext-memcached": "*"
   },
   "autoload": {
     "classmap": [
