--- a/conf/nginx/default.conf
+++ b/conf/nginx/default.conf
@@ -9,7 +9,11 @@ server {
                try_files $uri $uri/ /index.php?_page=$uri&$query_string;
        }
 
-        location ~ \.php$ {
+       location /download/ {
+           alias /fileshare/;
+       }
+
+       location ~ \.php$ {
             #try_files $uri $uri/ /index.php?_page=$query_string;
             try_files $uri $uri/ /index.php?_page=$uri&$query_string;
             #try_files $uri =404;
@@ -21,13 +25,13 @@ server {
             fastcgi_param PATH_INFO $fastcgi_path_info;
             fastcgi_send_timeout 600s;
             fastcgi_read_timeout 600s;
-        }
+       }
 
-        #location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf)$ {
-        location ~* \.(png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot)$ {
-            access_log        off;
-            log_not_found     off;
-            expires max;
-            add_header Cache-Control "public, no-transform";
-        }
+       #location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf)$ {
+       location ~* \.(png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot)$ {
+           access_log        off;
+           log_not_found     off;
+           expires max;
+           add_header Cache-Control "public, no-transform";
+       }
 }
