--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: "3.4"
 
 services:
 
-  blackoutland-notfallpunkt-php:
+  notfallpunkt-php:
     build: ./conf/php
-    container_name: blackoutland-notfallpunkt-php
-    hostname: blackoutland-notfallpunkt-php
+    container_name: notfallpunkt-php
+    hostname: notfallpunkt-php
     volumes:
       - ./www:/var/www
       - ./conf/php/fpm.ini:/usr/local/etc/php/conf.d/docker-fpm.ini
@@ -17,15 +17,15 @@ services:
       - ./fileshare:/fileshare
       - ./tools:/var/tools
     networks:
-      - blackoutland-net
+      - notfallpunkt-net
     restart: always
     env_file:
       - .env
 
-  blackoutland-notfallpunkt-nginx:
+  notfallpunkt-nginx:
     image: nginx:1.25.3-alpine3.18
-    container_name: blackoutland-notfallpunkt-nginx
-    hostname: blackoutland-notfallpunkt-nginx
+    container_name: notfallpunkt-nginx
+    hostname: notfallpunkt-nginx
     volumes:
       - ./www:/var/www
       - ./certs:/certs
@@ -33,7 +33,7 @@ services:
       - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./fileshare:/fileshare
     networks:
-      - blackoutland-net
+      - notfallpunkt-net
     restart: always
     ports:
       - 80:80
@@ -41,31 +41,32 @@ services:
     env_file:
       - .env
 
-  blackoutland-notfallpunkt-memcached:
+  notfallpunkt-memcached:
     image: memcached:1.6.22-alpine
-    container_name: blackoutland-notfallpunkt-memcached
-    hostname: blackoutland-notfallpunkt-memcached
+    container_name: notfallpunkt-memcached
+    hostname: notfallpunkt-memcached
     networks:
-      - blackoutland-net
+      - notfallpunkt-net
     restart: always
     env_file:
       - .env
 
-  blackoutland-notfallpunkt-memcachedadmin:
-    container_name: blackoutland-notfallpunkt-memcachedadmin
+  # Only for development, keep disabled for PROD
+  notfallpunkt-memcachedadmin:
+    container_name: notfallpunkt-memcachedadmin
     image: 'legacyphp/memcachedadmin:latest'
     tty: true
     ports:
       - '10000:80'
     environment:
       - 'TZ=UTC'
-      - 'SERVER=blackoutland-notfallpunkt-memcached:11211'
+      - 'SERVER=notfallpunkt-memcached:11211'
     networks:
-      - blackoutland-net
+      - notfallpunkt-net
 
-  kiwix:
-    container_name: blackoutland-notfallpunkt-kiwix
-    hostname: blackoutland-notfallpunkt-kiwix
+  notfallpunkt-kiwix:
+    container_name: notfallpunkt-kiwix
+    hostname: notfallpunkt-kiwix
     ports:
       - 8080:8080
     image: ghcr.io/kiwix/kiwix-serve:latest
@@ -74,7 +75,17 @@ services:
     command:
       - '*.zim'
 
+  notfallpunkt-ap:
+    build: .
+    container_name: notfallpunkt-ap
+    hostname: notfallpunkt-ap
+    network_mode: host
+    restart: always
+    privileged: true
+    env_file:
+      - .env
+
 networks:
-  blackoutland-net:
+  notfallpunkt-net:
     external:
-      name: blackoutland-net
+      name: notfallpunkt-net
