Raspi Zero optimizations

--- a/conf/php/Dockerfile
+++ b/conf/php/Dockerfile
@@ -3,11 +3,20 @@ FROM php:fpm-bullseye
 # Install dependencies
 RUN apt-get update && apt-get install -y git zlib1g-dev libjpeg-dev libpng-dev libonig-dev libcurl4-openssl-dev libicu-dev libsqlite3-dev libzip-dev
 
-RUN docker-php-ext-install pdo_mysql gd mbstring curl fileinfo iconv intl zip
+# Split into several separate runs so our container build doesn't abort on Raspi Zero because of RAM issues
+RUN docker-php-ext-install pdo_mysql
+RUN docker-php-ext-install gd
+RUN docker-php-ext-install mbstring
+RUN docker-php-ext-install curl
+RUN docker-php-ext-install fileinfo
+RUN docker-php-ext-install iconv
+RUN docker-php-ext-install intl
+RUN docker-php-ext-install zip
 
 RUN apt-get install -y unzip libz-dev libmemcached-dev
 
-RUN pecl install memcached && docker-php-ext-enable memcached
+RUN pecl install memcached
+RUN docker-php-ext-enable memcached
 
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
