Removed fileinfo PHP extension because unable to build on Raspi Zero

--- a/conf/php/Dockerfile
+++ b/conf/php/Dockerfile
@@ -8,7 +8,7 @@ RUN docker-php-ext-install pdo_mysql
 RUN docker-php-ext-install gd
 RUN docker-php-ext-install mbstring
 RUN docker-php-ext-install curl
-RUN docker-php-ext-install fileinfo
+#RUN docker-php-ext-install fileinfo
 RUN docker-php-ext-install iconv
 RUN docker-php-ext-install intl
 RUN docker-php-ext-install zip
