--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - .env
 
   notfallpunkt-memcached:
-    image: memcached:1.6.22-alpine
+    image: memcached:bullseye
     container_name: notfallpunkt-memcached
     hostname: notfallpunkt-memcached
     networks:
