--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,8 @@ services:
     network_mode: host
     restart: always
     privileged: true
+    volumes:
+      - ./certs:/certs
     env_file:
       - .env
 
