--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -17,7 +17,8 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    error_log stderr crit;
+    access_log stdout main;
 
     sendfile        on;
     #tcp_nopush     on;
