--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,10 @@ services:
     hostname: notfallpunkt-nginx
     volumes:
       - ./conf/nginx/templates:/etc/nginx/templates
+      - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./conf/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./www:/var/www
       - ./certs:/certs
-      - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./fileshare:/fileshare
     networks:
       - notfallpunkt-net
