--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     volumes:
       - ./conf/nginx/templates:/etc/nginx/templates
       - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./conf/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./conf.d:/etc/nginx/conf.d
       - ./www:/var/www
       - ./certs:/certs
       - ./fileshare:/fileshare
