--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,9 @@ services:
     privileged: true
     volumes:
       - ./certs:/certs
+      - ./conf/dns/named.conf:/etc/bind/named.conf
+      - ./conf/dns/zone.conf.template:/etc/bind/zone.conf.template
+      - ./conf/dns/zone.conf:/etc/bind/db.fakeroot
     env_file:
       - .env
 
