--- a/conf/dns/named.conf
+++ b/conf/dns/named.conf
@@ -16,7 +16,7 @@ options {
         directory "/var/bind";
 
         // Configure the IPs to listen on here.
-        listen-on { 0.0.0.0; };
+        listen-on { any; };
         listen-on-v6 { none; };
 
         // If you want to allow only specific hosts to use the DNS server:
