--- a/conf/dns/zone.conf.template
+++ b/conf/dns/zone.conf.template
@@ -1,3 +1,4 @@
+; Zone file for capturing ALL domains on purpose
 @ IN SOA ns.example.com. hostmaster.example.com. ( 1 3h 1h 1w 1d )
   IN NS ${PRI_DNS}
 * IN A ${AP_ADDR}
