--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DHCP_IP_START=10.3.9.2
 DHCP_IP_END=10.3.9.250
 DHCP_IP_NETMASK=255.255.255.0
 DHCP_IP_LEASE=24h
-SSID=nfp-test
+SSID=notfallpunkt
 CHANNEL=11
 COUNTRY_CODE=DE
 HW_MODE=g
